...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mit-AP-Gny">
                                                <rect key="frame" x="20" y="133" width="335" height="30"/>
                                                <nil key="textColor"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WOD-oC-paa">
                                                <rect key="frame" x="20" y="187" width="335" height="30"/>
                                                <nil key="textColor"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subject" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sgt-aL-8dQ">
                                                <rect key="frame" x="20" y="385" width="335" height="30"/>
                                                <nil key="textColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWS-Hf-QkF">
                                                <rect key="frame" x="306" y="535" width="49" height="30"/>
                                                <state key="normal" title="Submit"/>
                                                <connections>
                                                    <action selector="onClickSubmit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zup-eZ-VL0"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bz0-Us-T7Z">
                                                <rect key="frame" x="20" y="245" width="335" height="30"/>
                                                <nil key="textColor"/>
...
                                                <rect key="frame" x="20" y="321" width="335" height="30"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BQz-q9-gIw">
                                                        <rect key="frame" x="0.0" y="0.0" width="98.5" height="30"/>
                                                        <nil key="textColor"/>
...
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QQ4-9g-Bqc">
                                                        <rect key="frame" x="118.5" y="0.0" width="98" height="30"/>
                                                        <nil key="textColor"/>
...
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YYYY" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XTC-Ox-WLv">
                                                        <rect key="frame" x="236.5" y="0.0" width="98.5" height="30"/>
                                                        <nil key="textColor"/>
...
