...
        
        // Set up toolbar for a done button
        let pickerViewToolbar = UIToolbar()
        pickerViewToolbar.barStyle = .default
        pickerViewToolbar.sizeToFit()
        // Initialise done button
        let doneSubjectBtn = UIBarButtonItem.init(title: "Done", style: .done, target: self, action: #selector(onDoneButtonClick));
        // Place button on toolbar
        pickerViewToolbar.setItems([doneSubjectBtn], animated: false)
        // Place toolbars on each of these inputs
        txtSubject.inputAccessoryView = pickerViewToolbar
        txtDay.inputAccessoryView = pickerViewToolbar
        txtMonth.inputAccessoryView = pickerViewToolbar
...
        URLSession.shared.dataTask(with: request){ (data, response, error) in
            guard let data = data else {return}
            do {
                print("Got Subjects")
                self.subjects = try JSONDecoder().decode([Subject].self, from: data) // Decode
                DispatchQueue.main.async {
                    self.subjects.insert(Subject.init(name: "Select Subject"), at: 0) // Place a dummy in the first box
                }
            } catch let jsonErr{
                print("ERROR: In decoding Subjects")
                print(jsonErr)
            }
            }.resume()
...
            setUpLocationManager() // Set up location manager
            checkLocationAuth() // check the location authorization for the app
        }
        else {
            // Show alert to say turn on location
            let alert = UIAlertController(title: "Location Services", message: "Your location services are turned off", preferredStyle: UIAlertController.Style.alert);
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil));
            self.present(alert, animated: true, completion: nil);
        }
    }
    
    // MARK: - Check functions
    // Using the utility class to check all the dates correctly
...
            if checkDateIsInPast(textFieldDay.text!, textFieldMonth.text!, textFieldYear.text!) {
               return true
            }
            else { return false }
        }
        else {
            let alert = UIAlertController(title: "Incorrect date" , message: "The date provided does not exist", preferredStyle: UIAlertController.Style.alert)
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
            self.present(alert, animated: true, completion: nil)
            return false;
        }
    }
    // Checks using regex to see if an email address is valid
    func checkEmailIsValid(_ textField: UITextField) -> Bool {
        if Utils.checkEmailIsValid(textField.text!) {
            return true
        }
        else {
            let alert = UIAlertController(title: "Incorrect email format" , message: "The email address provided is in the correct format", preferredStyle: UIAlertController.Style.alert)
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
            self.present(alert, animated: true, completion: nil)
            return false;
        }
    }
    // Check if the subject has been correctly chosen
...
            if checkEmailIsValid(txtEmail) && checkDateIsValid(txtDay, txtMonth, txtYear) && checkSubjectIsValid(txtSubject){
                return true;
            }
            else {return false}
        }
        else {
            let alert = UIAlertController(title: "Incomplete Data", message: "You can not submit data whilst fields are incomplete", preferredStyle: UIAlertController.Style.alert);
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil));
            self.present(alert, animated: true, completion: nil);
            return false;
        }
    }
    
...
